--- a/Views/Expenses/Delete.cshtml
+++ b/Views/Expenses/Delete.cshtml
@@ -2,16 +2,27 @@
 
 <h2>Delete Expense</h2>
 
-<p>Are you sure you want to delete this?</p>
+<h3>Are you sure you want to delete this expense?</h3>
 
-<ul>
-    <li><strong>Title:</strong> @Model.Title</li>
-    <li><strong>Amount:</strong> @Model.Amount</li>
-    <li><strong>Category:</strong> @Model.Category</li>
-    <li><strong>Date:</strong> @Model.Date.ToShortDateString()</li>
-</ul>
+<div class="card mt-3">
+    <div class="card-body">
+        <dl class="row">
+            <dt class="col-sm-3">Title</dt>
+            <dd class="col-sm-9">@Model.Title</dd>
 
-<form asp-action="DeleteConfirmed">
+            <dt class="col-sm-3">Amount</dt>
+            <dd class="col-sm-9">$@Model.Amount.ToString("N2")</dd>
+
+            <dt class="col-sm-3">Category</dt>
+            <dd class="col-sm-9">@Model.Category</dd>
+
+            <dt class="col-sm-3">Date</dt>
+            <dd class="col-sm-9">@Model.Date.ToShortDateString()</dd>
+        </dl>
+    </div>
+</div>
+
+<form asp-action="Delete" method="post" class="mt-3">
     <input type="hidden" asp-for="Id" />
     <button type="submit" class="btn btn-danger">Delete</button>
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
